--- a/css/style-views.css
+++ b/css/style-views.css
@@ -13,37 +13,80 @@
   margin-right: 0 !important;
   margin-bottom: 40px; }
 
+.iphone-camera {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 6px;
+  height: 6px;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  background: #a2a2a2;
+  border-radius: 100%; }
+
+.iphone-speaker {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 48px;
+  height: 6px;
+  background: #B1B1B1;
+  border-top: 1px solid #9E9DA3;
+  border-radius: 50px;
+  border-left: 1px solid #9E9DA3;
+  border-right: 1px solid #9E9DA3; }
+
 .iphone-button {
-  width: 40px;
-  height: 40px;
+  position: relative;
+  top: 8px;
+  width: 46px;
+  height: 46px;
   border-radius: 100%;
-  border: 4px solid #9E9DA3;
-  background: #D4D2DA;
-  margin: auto;
-  margin-top: 4px; }
+  border: 1px solid #9E9DA3;
+  background: #1e5799;
+  background: -moz-linear-gradient(45deg, #1e5799 0%, #ddd 0%, #fff 100%);
+  background: -webkit-linear-gradient(45deg, #1e5799 0%, #ddd 0%, #fff 100%);
+  background: linear-gradient(45deg, #1e5799 0%, #ddd 0%, #fff 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1e5799', endColorstr='#fff', GradientType=1);
+  margin: auto; }
+  .iphone-button .inside {
+    top: 13px;
+    left: 13px;
+    width: 15px;
+    height: 15px;
+    border: 2px solid #B0B5B8;
+    border-radius: 4px;
+    position: absolute;
+    margin: auto; }
 
 .iphone-button:hover {
-  background: #5C5A69; }
-
-.mobile-view {
-  width: 320px;
-  height: 568px;
-  margin: auto;
-  border: 8px solid #E5E4ED;
-  border-radius: 10px;
-  padding-bottom: 50px;
-  transform: translateY(50px); }
+  background: #E7E7E7; }
 
 .mobile-heading {
   margin: 0 !important;
   display: block !important; }
 
-.tablet-view {
-  width: 768px;
-  height: 1024px;
+.mobile-view {
+  width: 320px !important;
+  height: 568px !important;
   margin: auto;
-  border: 8px solid #E5E4ED;
+  border-radius: 40px;
+  padding: 70px 10px;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.tablet-view {
+  width: 768px !important;
+  height: 1024px !important;
+  margin: auto;
   border-radius: 10px;
-  padding-bottom: 50px; }
+  padding: 70px 14px;
+  padding-top: 60px; }
+
+@media (max-height: 708px) {
+  .mobile-view {
+    top: 0;
+    transform: none; } }
 
 /*# sourceMappingURL=style-views.css.map */
