--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -10,7 +10,7 @@ $anime-time: 1.7s;
 
 .bounceInLeft {
   animation-name: bounceInLeft; 
-  animation-duration: $anime-time;
+  animation-duration: 1s;
   animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
 
@@ -33,10 +33,6 @@ $anime-time: 1.7s;
 }
 
 @keyframes bounceInLeft {
- /* from, 60%, 75%, 90%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-  }*/
-
   0% {
     opacity: 0;
     transform: translate3d(-3000px, 0, 0);
