--- a/scss/style.scss
+++ b/scss/style.scss
@@ -153,7 +153,7 @@ svg.feather:hover {
       width: 32px;
     }
     svg {
-      vertical-align: middle
+      vertical-align: text-bottom;
     }
 
     // border-top: 1px solid;
@@ -231,12 +231,16 @@ svg.feather:hover {
   position: relative;
 
   .list {
-    overflow-y: scroll;
+    div {
+      padding: 10px 0;
+    }
     h3 {
-      margin: 10px 60px;
+      margin: 0 0 0 20px;
+    }
+    svg {
+      margin-left: 30px;
     }
   }
-
   div {
     display: inline-block;
     vertical-align: middle;
