--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@ $contact-page: #4448C8;
 $design-page: #82BD43;
 $background: #471eff;
 $device-color: #eee;
+$enhanced-text: #948dff;
 
 html {
   -webkit-touch-callout: none;
@@ -133,6 +134,7 @@ svg.feather:hover {
 
 .footer {
   svg {
+    stroke: $enhanced-text;
     vertical-align: middle;
   }
 }
@@ -163,7 +165,7 @@ svg.feather:hover {
     }
 
     a:-webkit-any-link {
-      color: #948dff;
+      color: $enhanced-text;
     }
   }
 }
@@ -260,6 +262,8 @@ svg.feather:hover {
 }
 
 .resume-content {
+  width: 100%;
+
   h1 {
     margin: 0 0 20px 0;
     height: 56px;
@@ -301,7 +305,7 @@ svg.feather:hover {
 
 .map {
   width: 100%;
-  height: 100%;
+  height: 80%;
 }
 
 .design-page {
