--- a/css/animation.css
+++ b/css/animation.css
@@ -9,6 +9,9 @@
   animation-duration: 1s;
   animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
 
+.pulse {
+  animation: pulse 0.86s cubic-bezier(1, -0.05, 0.57, 0.11) infinite; }
+
 @keyframes increase-width {
   0% {
     width: 50%; }
@@ -32,5 +35,10 @@
     transform: translate3d(5px, 0, 0); }
   100% {
     transform: none; } }
+@keyframes pulse {
+  from {
+    stroke: #fff; }
+  to {
+    stroke: #da0c0c; } }
 
 /*# sourceMappingURL=animation.css.map */
