--- a/scss/animation.scss
+++ b/scss/animation.scss
@@ -14,6 +14,10 @@ $anime-time: 1.7s;
   animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
 
+.pulse {
+  animation: pulse 0.86s cubic-bezier(1,-0.05, 0.57, 0.11) infinite;
+}
+
 @keyframes increase-width {
   0% {
     width: 50%;
@@ -53,5 +57,14 @@ $anime-time: 1.7s;
 
   100% {
     transform: none;
+  }
+}
+
+@keyframes pulse {
+  from {
+    stroke: #fff;
+  }
+  to {
+    stroke: #da0c0c;
   }
 }
