--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,9 @@ svg.feather:hover {
 
 .heading {
   position: relative;
-  height: 120px;
+  height: auto;
   width: 100%;
+  padding: 10px 0;
   text-align: center;
   background: #244ad6;
   background: -moz-linear-gradient(left, #244ad6 0%, #19e876 100%);
@@ -154,7 +155,6 @@ svg.feather:hover {
     margin: 0;
     display: inline-block; }
   .heading h1 {
-    margin-top: 20px;
     margin-right: 40px; }
 
 .resume {
@@ -231,7 +231,8 @@ svg.feather:hover {
 
 .map {
   width: 100%;
-  height: 80%; }
+  height: 80%;
+  background: #111111; }
 
 .design-page {
   position: relative;
