--- a/scss/style.scss
+++ b/scss/style.scss
@@ -210,8 +210,9 @@ svg.feather:hover {
 
 .heading {
   position: relative;
-  height: 120px;
+  height: auto;
   width: 100%;
+  padding: 10px 0;
   text-align: center;
   background: #244ad6;
   background: -moz-linear-gradient(left,  #244ad6 0%, #19e876 100%);
@@ -225,7 +226,6 @@ svg.feather:hover {
   }
 
   h1  {
-    margin-top: 20px;
     margin-right: 40px;
   }
 }
@@ -336,6 +336,7 @@ svg.feather:hover {
 .map {
   width: 100%;
   height: 80%;
+  background: $black;
 }
 
 .design-page {
