--- a/scss/style.scss
+++ b/scss/style.scss
@@ -225,8 +225,8 @@ svg.feather:hover {
     display: inline-block;
   }
 
-  h1  {
-    margin-right: 40px;
+  h2  {
+    margin-left: 40px;
   }
 }
 
