--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   body ::-webkit-scrollbar {
     display: none; }
 
-.device, .heading, svg {
+.device, .heading, svg, .enhance-animate {
   transition: 200ms;
   transition-timing-function: ease-in-out; }
 
@@ -38,6 +38,15 @@ h3 {
   font-size: 32px;
   letter-spacing: 1px;
   font-family: 'Indie Flower', cursive; }
+
+.enhanced {
+  color: #948dff; }
+
+.enhance-animate {
+  background-image: linear-gradient(to right, transparent 0%, #444 100%);
+  background-size: 200%; }
+  .enhance-animate:hover {
+    background-position: -100%; }
 
 .col-30 {
   width: 30%; }
@@ -100,16 +109,33 @@ svg.feather:hover {
   vertical-align: middle; }
 
 .arrow {
-  width: 42px; }
+  width: 42px !important;
+  margin: 0 !important; }
+  .arrow path {
+    fill: #948dff; }
 
 .list {
+  width: 100%;
   padding: 0; }
+  .list .life {
+    width: 100%; }
+    .list .life .life-text {
+      width: 100%; }
+      .list .life .life-text h1 {
+        margin-bottom: 10px;
+        display: inline-block; }
+    .list .life img {
+      position: relative;
+      height: 400px;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0.4; }
   .list .list-item {
     width: 100%; }
     .list .list-item svg, .list .list-item h3 {
       display: inline-block; }
     .list .list-item svg, .list .list-item svg.feather:hover {
-      width: 32px; }
+      width: 24px; }
     .list .list-item svg {
       vertical-align: text-bottom; }
     .list .list-item a {
@@ -127,7 +153,6 @@ svg.feather:hover {
 
 .view {
   overflow-y: auto;
-  background: #111111;
   color: #fff; }
 
 .page div :last-child svg {
@@ -165,8 +190,8 @@ svg.feather:hover {
   padding-bottom: 20px; }
   .resume .list div {
     padding: 10px 0; }
-  .resume .list h3 {
-    margin: 0 0 0 20px; }
+  .resume .list h3, .resume .list h1 {
+    margin: 0 20px; }
   .resume .list svg {
     margin-left: 30px; }
   .resume div {
@@ -217,8 +242,19 @@ svg.feather:hover {
     right: 0;
     position: absolute; }
 
+.skills {
+  width: 100%;
+  text-align: center;
+  background: #111111;
+  padding-bottom: 10px; }
+  .skills .skills-text {
+    opacity: 0; }
+    .skills .skills-text h1, .skills .skills-text h3 {
+      margin: 0;
+      padding: 20px 0; }
+
 .bottom-right {
-  position: absolute;
+  position: fixed;
   right: 20px;
   bottom: 20px; }
 
@@ -231,8 +267,7 @@ svg.feather:hover {
 
 .map {
   width: 100%;
-  height: 80%;
-  background: #111111; }
+  height: 80%; }
 
 .design-page {
   position: relative;
