Add buttons to resume svgs. Change headings background.  change svg behavior in buttons. Adapt a single font. Change all of svgs to feather-like. Change skills style. Change footer description. Add more technology skills. Change the animation of headings.

--- a/css/animation.css
+++ b/css/animation.css
@@ -2,7 +2,7 @@
   animation: pulse 0.86s cubic-bezier(1, -0.05, 0.57, 0.11) infinite; }
 
 .opate span {
-  animation: leScaleYIn 1s cubic-bezier(1, -0.05, 0.57, 0.11); }
+  animation: opate 1s cubic-bezier(1, -0.05, 0.57, 0.11); }
 
 @keyframes opate {
   from {
